--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
     <uses-permission android:name="${applicationId}.permission.RECEIVE_ADM_MESSAGE" />
 
     <application>
+
+    <!-- Clase principal del plugin -->
+        <activity
+            android:name=".FlutterAmazonAdmPlugin"
+            android:exported="false" />
+            
         <!-- Habilitar ADM -->
         <amazon:enable-feature
             android:name="com.amazon.device.messaging"
