--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,6 +40,6 @@ android {
     }
 
     dependencies {
-        implementation 'com.amazon.device.messaging:adm:1.2.0'
+        compileOnly files('libs/amazon-device-messaging-1.2.0.jar')
     }
 }
