feat: Update ADM Receiver configuration in AndroidManifest.xml
- Set android:exported=true for ADM receiver
- Add permission com.amazon.device.messaging.permission.SEND

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -50,7 +50,9 @@
         <!-- ADM Message Handler Receiver -->
         <receiver
             android:name=".AdmMessageReceiver"
-            android:exported="false">
+            android:exported="true"
+            android:permission="com.amazon.device.messaging.permission.SEND">
+            
             <intent-filter>
                 <action android:name="com.amazon.device.messaging.intent.RECEIVE" />
                 <action android:name="com.amazon.device.messaging.intent.REGISTRATION" />
