--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:name="${applicationId}.permission.RECEIVE_ADM_MESSAGE"
         android:protectionLevel="signature" />
     <uses-permission android:name="${applicationId}.permission.RECEIVE_ADM_MESSAGE" />
+    <uses-permission android:name="android.permission.BIND_JOB_SERVICE" />
 
     <application>
 
@@ -30,6 +31,7 @@
         <!-- ADM Message Handler Service -->
         <service
             android:name=".AdmMessageHandler"
+            android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="false" />
 
         <!-- Actividad para manejar notificaciones -->
@@ -45,7 +47,6 @@
                 android:name="io.flutter.embedding.android.NormalTheme"
                 android:resource="@style/NormalTheme" />
         </activity>
-
 
         <!-- ADM Message Handler Receiver -->
         <receiver
