--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="com.amazon.device.messaging.permission.RECEIVE" />
     
     <permission
-        android:name="com.kinesis.flutter_adm.permission.RECEIVE_ADM_MESSAGE"
+        android:name="com.kinesis.flutter_amazon_adm.permission.RECEIVE_ADM_MESSAGE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="${applicationId}.permission.RECEIVE_ADM_MESSAGE" />
