--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
+    <uses-permission android:name="android.permission.BIND_JOB_SERVICE" />
     <uses-permission android:name="com.amazon.device.messaging.permission.RECEIVE" />
     
     <permission
@@ -26,6 +27,7 @@
         
         <service
             android:name=".AdmMessageHandlerJob"
+            android:permission="android.permission.BIND_JOB_SERVICE"
             android:exported="false" />
         
         <amazon:enable-feature android:name="com.amazon.device.messaging"
